--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
           <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="#">Contact</a></li>
         </ul> -->
-        <h3 class="text-muted">olapicFeedVisual</h3>
+        <h3 class="text-muted">olapic-xml-magic</h3>
       </div>
 
       <div ng-view=""></div>
