--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         <h3 class="text-muted">olapic-xml-magic</h3>
       </div>
 
-      <div ng-view=""></div>
+      <div class="main-view" ng-view=""></div>
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from jae</p>
